--- a/x402-frontend/package.json
+++ b/x402-frontend/package.json
@@ -16,8 +16,8 @@
     "@x402/fetch": "^2.3.0",
     "axios": "^1.13.5",
     "next": "16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "viem": "^2.45.2",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/connect": "^3.4.38",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
